  Glacier2CryptPermissionsVerifier plug-in. On Windows, this plug-in
  is the only remaining Ice run time dependency on OpenSSL.

- Removed the Ice::Stats interface, which was deprecated in Ice 3.5
  and replaced by the new metrics facility.

- The IceBox.ServiceManager object adapter has been deprecated.
  Use Ice.Admin and the IceBox.ServiceManager facet instead.

- Removed the deprecated properties IcePatch2.ChunkSize,
  IcePatch2.Directory, IcePatch2.Remove and IcePatch2.Thorough.


C++ Changes
===========

- Fixed bug where a private Windows Runtime delegate type could end up
  being published in Windows Store Components metadata files (WINMD).

- New garbage collection support for object graphs with cycles.

  Ice no longer uses a background thread to collect objects. Instead,
  Ice::Object now has a new ice_collectable method to indicate whether
  or not the object graph can be collected. When a graph is marked as
  collectable with this method, you shouldn't update the structure of
  the object graph.

  Ice tries to collect the graph each time a reference count is
  dropped for an object in the cycle.

  By default, object collection is turned off. When it's turned on
  with Ice.CollectObjects=1, the Ice run time calls
  ice_collectable(true) on all the objects it unmarshals.

  The properties Ice.GC.Interval and Ice.Trace.GC are no longer
  supported, nor is the Ice::collectGarbage() function.

- Significant changes to the IceSSL plug-in:

  * Now uses the native SecureTransport API on OS X

  * Now uses the native SChannel API on Windows

  OpenSSL is only used in IceSSL on Linux.

  Refer to the release notes for important information about upgrading
  existing applications.

- Added support for the IceSSL.FindCert property on Windows and OS X.

- Added the new metadata tag "cpp:view-type:Type", where Type is
  a type that can safely provide a "view" into the Ice unmarshaling
  buffer and thereby avoid extra copies. This tag can only be applied