@@ -6,7 +6,7 @@
 // ICE_LICENSE file included in this distribution.
 //
 // **********************************************************************
-// Generated by makeprops.py from file ./config/PropertyNames.xml, Thu Nov  6 07:51:16 2014
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Dec  9 12:08:30 2014
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -1057,7 +1057,6 @@ const IceInternal::PropertyArray
 
 const IceInternal::Property Glacier2PropsData[] = 
 {
-    IceInternal::Property("Glacier2.AddSSLContext", true, 0),
     IceInternal::Property("Glacier2.AddConnectionContext", false, 0),
     IceInternal::Property("Glacier2.Client.ACM.Timeout", false, 0),
     IceInternal::Property("Glacier2.Client.ACM.Heartbeat", false, 0),
