@@ -35,7 +35,6 @@ serverProc = TestUtil.startServer(server)
 print("ok")
 
 args = ' --Ice.Warn.Dispatch=0' + \
-       ' --Glacier2.AddSSLContext=1' + \
        ' --Glacier2.AddConnectionContext=1' + \
        ' --Glacier2.Client.Endpoints="tcp -h 127.0.0.1 -p 12347:ssl -h 127.0.0.1 -p 12348"' + \
        ' --Glacier2.Server.Endpoints="tcp -h 127.0.0.1"' \
